--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div>
-            <table class="table table-hover table-striped table-bordered text-center">
+            <table class="table table-hover table-striped table-bordered text-center" id="tabla">
                 <thead class="bg-primary">
                     <tr class="text-white">
                         <th scope="col">Nombre</th>
@@ -30,50 +30,20 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Johnathan</td>
-                        <td>Ebert</td>
-                        <td> <span class="bg-primary rounded text-white px-2">hombre</span> </td>
-                        <td>45</td>
-                        <td>178</td>
-                        <td>97</td>
-                        <td> <span class="bg-secondary rounded text-white px-2">sedentaria</span> </td>
-                        <td>1986</td>
-                        <td>2582</td>
-                    </tr>
-                    <tr>
-                        <td>Fermin</td>
-                        <td>Kris</td>
-                        <td> <span class="bg-primary rounded text-white px-2">mujer</span> </td>
-                        <td>28</td>
-                        <td>179</td>
-                        <td>65</td>
-                        <td> <span class="bg-secondary rounded text-white px-2">moderada</span> </td>
-                        <td>1469</td>
-                        <td>2350</td>
-                    </tr>
-                    <tr>
-                        <td>Ann</td>
-                        <td>Takamaki</td>
-                        <td> <span class="bg-primary rounded text-white px-2 ">mujer</span> </td>
-                        <td>17</td>
-                        <td>170</td>
-                        <td>48</td>
-                        <td> <span class="bg-secondary rounded text-white px-2">intensa</span> </td>
-                        <td>1343</td>
-                        <td>2551</td>
-                    </tr>
                 </tbody>
             </table>
         </div>
+
+        <template>
+
+        </template>
 
         <div class="d-flex flex-row justify-content-center">
             <button type="button" class="btn btn-primary rounded-0 text-white m-2 px-5" data-bs-toggle="modal"
                 data-bs-target="#staticBackdrop">
                 Nuevo cliente
             </button>
-            <button type="button" class="btn btn-secondary rounded-0 text-white m-2 px-4" data-bs-toggle="modal"
-                data-bs-target="#staticBackdrop">
+            <button type="button" class="btn btn-secondary rounded-0 text-white m-2 px-4">
                 Cargar datos externos
             </button>
         </div>
@@ -196,5 +166,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
