--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                   class="form-control"
                   id="nombre"
                   placeholder="Nombre"
+                  pattern="([A-z-À-ž\s]){2,}"
                   required
                 />
               </div>
@@ -120,6 +121,7 @@
                   class="form-control"
                   id="apellidos"
                   placeholder="Apellidos"
+                  pattern="([A-z-À-ž\s]){2,}"
                   required
                 />
               </div>
@@ -154,6 +156,8 @@
                   class="form-control"
                   id="edad"
                   placeholder="35"
+                  min="18"
+                  max="200"
                   required
                 />
               </div>
@@ -164,6 +168,8 @@
                   class="form-control"
                   id="peso"
                   placeholder="45"
+                  min="45"
+                  max="300"
                   required
                 />
               </div>
@@ -174,6 +180,8 @@
                   class="form-control"
                   id="altura"
                   placeholder="165"
+                  min="140"
+                  max="300"
                   required
                 />
               </div>
