--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 data-bs-target="#staticBackdrop">
                 Nuevo cliente
             </button>
-            <button type="button" class="btn btn-secondary rounded-0 text-white m-2 px-4">
+            <button type="button" class="btn btn-secondary rounded-0 text-white m-2 px-4" id="carga">
                 Cargar datos externos
             </button>
         </div>
