--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
                   </div>
 
                   <div class="col-6 mb-0">
-                    <label for="sexo" class="form-label">Género</label>
+                    <label for="sexo" class="form-label">Sexo</label>
                     <select
                       class="form-select"
                       aria-label="Default select sexo"
                       id="sexo"
                       required
                     >
-                      <option selected value="Masculino">Masculino</option>
-                      <option value="Femenino">Femenino</option>
+                      <option selected value="hombre">Hombre</option>
+                      <option value="mujer">Mujer</option>
                     </select>
                   </div>
                   <div class="col-6 mb-0">
@@ -138,10 +138,10 @@
                       id="actividad"
                       required
                     >
-                      <option selected value="Ligera">Ligera</option>
-                      <option value="Moderada">Moderada</option>
-                      <option value="Intensa">Intensa</option>
-                      <option value="Sedentaria">Sedentaria</option>
+                      <option selected value="ligera">Ligera</option>
+                      <option value="moderada">Moderada</option>
+                      <option value="intensa">Intensa</option>
+                      <option value="sedentaria">Sedentaria</option>
                     </select>
                   </div>
 
