--- a/index.html
+++ b/index.html
@@ -207,6 +207,18 @@
       </div>
     </div>
 
+    <template>
+      <td class="celdaNombre"></td>
+      <td class="celdaApellidos"></td>
+      <td class="celdaSexo"><span class="spanSexo bg-primary rounded text-white px-2"></span></td>
+      <td class="celdaEdad"></td>
+      <td class="celdaAltura"></td>
+      <td class="celdaPeso"></td>
+      <td class="celdaActividad"><span class="spanActividad bg-secondary rounded text-white px-2"></span></td>
+      <td class="celdaGET"></td>
+      <td class="celdaGER"></td>
+    </template>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
